# claude-advanced-tools

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  bigfootlive_simulation.py  semantic_search_demo.py  token_comparison.py  tool_search_demo.py
src/: __init__.py  client.py  embeddings.py  tool_registry.py  tool_search.py
tests/: __init__.py  test_auto_search.py  test_embeddings.py  test_registry.py  test_tool_search.py
tools/: __init__.py  analytics_tools.py  event_tools.py  media_tools.py
