[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-advanced-tools"
version = "0.1.0"
description = "Advanced tool use patterns for Claude API: Tool Search + Tool Examples"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BigfootLive", email = "dev@bigfootlive.io"}
]
keywords = ["claude", "anthropic", "ai", "tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ava-bigfootlive/claude-advanced-tools"
Documentation = "https://github.com/ava-bigfootlive/claude-advanced-tools#readme"
Repository = "https://github.com/ava-bigfootlive/claude-advanced-tools.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tools*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
